so文件命名修正+api引用目录修正+版本名修正

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = vnpy_uft
-version = v.3.7.2.4
+version = 3.7.2.4
 url = https://www.vnpy.com
 license = MIT
 author = Xiaoyou Chen
