--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = vnpy_uft
-version = 3.7.2.4.1
+version = 3.7.2.4.2
 url = https://www.vnpy.com
 license = MIT
 author = Xiaoyou Chen
@@ -33,4 +33,4 @@ install_requires =
     importlib_metadata
 
 [options.package_data]
-* = *.dll, *.so, *.pyd
+* = *.dll, *.so, *.pyd, *.dat
