--- a/setup.cfg
+++ b/setup.cfg
@@ -36,4 +36,4 @@ install_requires =
     importlib_metadata
 
 [options.package_data]
-* = *.dll, *.so, *.pyd, *.dat
+* = *.dll, *.so, *.pyd, *.dat, *.lib
